--- a/src/Resources/views/Action/obtain_payment_method_nonce_hf.html.twig
+++ b/src/Resources/views/Action/obtain_payment_method_nonce_hf.html.twig
@@ -8,13 +8,13 @@
             <div class="panel-group" id="braintree-accordion" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default">
                     <div class="panel-heading" role="tab" id="headingOne">
-                        <label class="panel-title collapsed" data-toggle="collapse" data-parent="#braintree-accordion" data-target="#creadit-card" aria-expanded="true" aria-controls="creadit-card">
+                        <label class="panel-title collapsed" data-toggle="collapse" data-parent="#braintree-accordion" data-target="#pbt-creadit-card" aria-expanded="true" aria-controls="creadit-card">
                             <input type="radio" name="braintree-payment-type" value="creditCard" style="display: none">
                             <i class="fa fa-credit-card"></i>
                             Card
                         </label>
                     </div>
-                    <div id="creadit-card" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                    <div id="pbt-creadit-card" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                         <div class="panel-body">
                             <div class="bootstrap-basic">
                                 <form id="braintree-hosted-fields-form" class="needs-validation" novalidate="">
@@ -59,27 +59,27 @@
                         </div>
                     </div>
 
-                    <div class="panel-heading" role="tab" id="headingTwo">
-                        <label class="panel-title collapsed" data-toggle="collapse" data-parent="#braintree-accordion" data-target="#paypal" aria-expanded="true" aria-controls="paypal">
+                    <div id="pbt-paypal-container" class="panel-heading" role="tab" style="display: none">
+                        <label class="panel-title collapsed" data-toggle="collapse" data-parent="#braintree-accordion" data-target="#pbt-paypal" aria-expanded="true" aria-controls="paypal">
                             <input type="radio" name="braintree-payment-type" value="PayPalAccount" style="display: none">
                             <i class="fa fa-paypal"></i>
                             Paypal
                         </label>
                     </div>
-                    <div id="paypal" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                    <div id="pbt-paypal" class="panel-collapse collapse" role="tabpanel" aria-labelledby="pbt-paypal-container">
                         <div class="panel-body">
                             <div id="paypal-button"></div>
                         </div>
                     </div>
 
-                    <div class="panel-heading" role="tab" id="headingThree">
-                        <label class="panel-title collapsed" data-toggle="collapse" data-parent="#braintree-accordion" data-target="#ach-direct" aria-expanded="true" aria-controls="ach-direct">
+                    <div id="pbt-ach-direct-container" class="panel-heading" role="tab" style="display: none">
+                        <label class="panel-title collapsed" data-toggle="collapse" data-parent="#braintree-accordion" data-target="#pbt-ach-direct" aria-expanded="true" aria-controls="ach-direct">
                             <input type="radio" name="braintree-payment-type" value="UsBankAccount" style="display: none">
                             <i class="fa fa-ach"></i>
                             ACH Direct
                         </label>
                     </div>
-                    <div id="ach-direct" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                    <div id="pbt-ach-direct" class="panel-collapse collapse" role="tabpanel" aria-labelledby="pbt-ach-direct-container">
                         <div id="ach-direct-container" class="panel-body">
                             <div class="form-group">
                                 <label for="ach-routingNumber">Routing Number</label>
@@ -153,6 +153,7 @@
                 'us-bank-account',
                 'client',
             ];
+            const billingEvent = new Event('braintree.billing-address');
 
             prefillBTBillingAddress();
             loadBTScripts();
@@ -171,7 +172,7 @@
                     var s = document.createElement('script');
                     s.id = btId;
                     s.async = true;
-                    s.src = (/^http(s)?:/.test(btScriptSrc[i]) ? '' : 'https://js.braintreegateway.com/web/3.52.1/js/') + btScriptSrc[i] + '.min.js';
+                    s.src = (/^http(s)?:/.test(btScriptSrc[i]) ? '' : 'https://js.braintreegateway.com/web/3.56.0/js/') + btScriptSrc[i] + '.min.js';
                     s.onload = function () {
                         loadBTScript(i + 1);
                     };
@@ -182,7 +183,6 @@
             }
 
             function prefillBTBillingAddress() {
-                const billingEvent = new Event('braintree.billing-address');
                 billingEvent.address = {
                     countryName: '',
                     firstName: '',
@@ -226,10 +226,11 @@
                         // configured.
                         if (paypalCheckoutErr) {
                             //console.error('paypalCheckoutErr:', paypalCheckoutErr);
-                            fireBraintreeError(paypalCheckoutErr);
+                            //fireBraintreeError(paypalCheckoutErr);
                             return;
                         }
 
+                        document.getElementById('pbt-paypal-container').style.display = 'block';
                         // Set up PayPal with the checkout.js library
                         paypal.Button.render({
                             env: '{{ env }}', //'sandbox', // or 'production'
@@ -249,18 +250,18 @@
                             onAuthorize: function (data, actions) {
                                 return paypalCheckoutInstance.tokenizePayment(data, function (onAuthorizeErr, onAuthorizePayload) {
                                     if (onAuthorizeErr) {
-                                        //console.log('onAuthorizeErr:', onAuthorizeErr);
+                                        // console.log('onAuthorizeErr:', onAuthorizeErr);
                                         fireBraintreeError(onAuthorizeErr);
                                         return false;
                                     }
-                                    console.log('onAuthorizePayload:', onAuthorizePayload);
+                                    // console.log('onAuthorizePayload:', onAuthorizePayload);
                                     // Submit `payload.nonce` to your server.
                                     sendBraintreeNonce(onAuthorizePayload.nonce);
                                 });
                             },
 
                             onCancel: function (data) {
-                                console.log('checkout.js payment cancelled', JSON.stringify(data, 0, 2));
+                                // console.log('checkout.js payment cancelled', JSON.stringify(data, 0, 2));
                             },
 
                             onError: function (err) {
@@ -276,10 +277,11 @@
                         }, function (usBankAccountErr, usBankAccountInstance) {
                             if (usBankAccountErr) {
                                 //console.error('usBankAccountErr:', usBankAccountErr);
-                                fireBraintreeError(usBankAccountErr);
+                                //fireBraintreeError(usBankAccountErr);
                                 throw usBankAccountErr;
                             }
 
+                            document.getElementById('pbt-ach-direct-container').style.display = 'block';
                             document.dispatchEvent(new Event('braintree.usBankAccount.created'));
 
                             document.querySelector('#ach-ownershipType').addEventListener('change', function (e) {
@@ -329,7 +331,7 @@
 
                                     // Submit tokenizedPayload.nonce to your server as you would
                                     // other payment method nonces.
-                                    console.log('tokenizedPayload:', tokenizedPayload);
+                                    // console.log('tokenizedPayload:', tokenizedPayload);
                                     sendBraintreeNonce(tokenizedPayload.nonce);
                                 });
                             });
@@ -342,7 +344,7 @@
                         version: 2
                     }, function (threeDSecureErr, threeDSecureInstance) {
                         if (threeDSecureErr) {
-                            //console.log('threeDSecureErr:', threeDSecureErr);
+                            // console.log('threeDSecureErr:', threeDSecureErr);
                             fireBraintreeError(threeDSecureErr);
                             return;
                         }
@@ -503,7 +505,7 @@
                                     return;
                                 }
 
-                                console.log('payload:', payload);
+                                // console.log('payload:', payload);
 
                                 // This is where you would submit payload.nonce to your server
 
@@ -517,7 +519,7 @@
                                         amount: getBTAmount(),
                                         nonce: payload.nonce,
                                         onLookupComplete: function (result, callback) {
-                                            //console.log('result: ', result);
+                                            // console.log('result: ', result);
                                             callback();
                                         },
                                         onUserClose: function () {}
@@ -532,7 +534,7 @@
                                         }
                                         // 3D Secure finished.
                                         // Use nonce in response to create transaction. This should be different from the nonce created on your server.
-                                        console.log('After verify:', verifyResponse);
+                                        // console.log('After verify:', verifyResponse);
 
                                         sendBraintreeNonce(verifyResponse.nonce);
                                     });
@@ -552,7 +554,7 @@
             }
 
             function fireBraintreeError(err) {
-                console.log(err);
+                // console.log(err);
                 var resultEvent = new Event('braintree.error');
                 resultEvent.exception = err;
                 document.dispatchEvent(resultEvent);
